[metadata]
name = your-package-name  # Replace with your actual package name
version = attr: your_package.__version__  # Make sure this points to the correct module

[options]
packages = find:
package_dir =
    = .  # The root directory is the package directory

[options.packages.find]
where = .  # Look for packages in the root directory

[semantic_release]
version_variable = your_package/__init__.py:__version__  # Point to where __version__ is defined, typically in __init__.py
